fix overflow quote out parent block

--- a/gulp/scss/_custom-guestbook.scss
+++ b/gulp/scss/_custom-guestbook.scss
@@ -120,6 +120,7 @@ img.smile {
 	word-break: break-all;
 	margin-bottom: 25px;
 	width: 100%;
+	overflow: hidden;
 }
 
 .post-content-numbers {
